Fix isNoSplit method to use getFirst